--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Malla Interactiva - Contador Público (Plan 2012)</title>
+<title>Contador Público (Plan 2012)</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 20px; }
   .node {
