Actualizado index.html

--- a/index.html
+++ b/index.html
@@ -2,88 +2,82 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Mi Malla - Contador Público (2012)</title>
+  <title>Malla Contador Público - Semestres</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Mi Malla - Contador Público (2012)</h1>
+  <h1>Malla Contador Público (FCEA) - Por Semestres</h1>
 
   <div class="grid">
 
-    <!-- Primer año -->
-    <div class="year">
-      <h2>1er año</h2>
-
-      <div class="semester">
-        <h3>1er semestre</h3>
-        <div class="subject aprobado">Conceptos Contables</div>
-        <div class="subject aprobado">Cálculo 1A</div>
-        <div class="subject aprobado">Administración y Gestión de las Organizaciones</div>
-      </div>
-
-      <div class="semester">
-        <h3>2do semestre</h3>
-        <div class="subject aprobado">Cálculo 1B</div>
-        <div class="subject cursando">Introducción a la Microeconomía</div>
-        <div class="subject">Matemática Financiera</div>
-      </div>
+    <!-- Semestre 1 -->
+    <div class="semester">
+      <h2>Semestre 1</h2>
+      <div class="subject aprobado">Conceptos Contables</div>
+      <div class="subject aprobado">Administración y Gestión de las Organizaciones 1</div>
+      <div class="subject no_cursada">Introducción a la Microeconomía</div>
+      <div class="subject aprobado">Cálculo 1A</div>
+      <div class="subject aprobado">Cálculo 1B</div>
     </div>
 
-    <!-- Segundo año -->
-    <div class="year">
-      <h2>2do año</h2>
-
-      <div class="semester">
-        <h3>1er semestre</h3>
-        <div class="subject aprobado">Contabilidad General 2</div>
-        <div class="subject aprobado">Derecho Civil</div>
-        <div class="subject cursando">Introducción a la Estadística</div>
-      </div>
-
-      <div class="semester">
-        <h3>2do semestre</h3>
-        <div class="subject aprobado">Procesos y Sistemas de Información</div>
-        <div class="subject">Macroeconomía</div>
-        <div class="subject cursando">Derecho Comercial</div>
-      </div>
+    <!-- Semestre 2 -->
+    <div class="semester">
+      <h2>Semestre 2</h2>
+      <div class="subject aprobado">Contabilidad General 1</div>
+      <div class="subject aprobado">Derecho Civil</div>
+      <div class="subject no_cursada">Economía Descriptiva</div>
     </div>
 
-    <!-- Tercer año -->
-    <div class="year">
-      <h2>3er año</h2>
-
-      <div class="semester">
-        <h3>1er semestre</h3>
-        <div class="subject cursando">Derecho Societario</div>
-        <div class="subject">Contabilidad de Costos</div>
-        <div class="subject">Estadística Inferencial</div>
-      </div>
-
-      <div class="semester">
-        <h3>2do semestre</h3>
-        <div class="subject">Contabilidad Superior</div>
-        <div class="subject">Finanzas I</div>
-        <div class="subject">Derecho del Trabajo</div>
-      </div>
+    <!-- Semestre 3 -->
+    <div class="semester">
+      <h2>Semestre 3</h2>
+      <div class="subject no_cursada">Introducción a la Estadística</div>
+      <div class="subject no_cursada">Contabilidad General 2</div>
+      <div class="subject no_cursada">Derecho Comercial</div>
+      <div class="subject aprobado">Procesos y Sistemas de Información</div>
     </div>
 
-    <!-- Cuarto año -->
-    <div class="year">
-      <h2>4to año</h2>
+    <!-- Semestre 4 -->
+    <div class="semester">
+      <h2>Semestre 4</h2>
+      <div class="subject no_habilitada">Contabilidad General 3/div>
+      <div class="subject no_habilitada">Matemática Financiera</div>
+      <div class="subject no_cursada">Legislación Laboral y Seguridad Social</div>
+      <div class="subject no_cursada">Derecho Societario</div>
+    </div>
 
-      <div class="semester">
-        <h3>1er semestre</h3>
-        <div class="subject">Impuestos I</div>
-        <div class="subject">Finanzas II</div>
-        <div class="subject">Auditoría</div>
-      </div>
+    <!-- Semestre 5 -->
+    <div class="semester">
+      <h2>Semestre 5</h2>
+      <div class="subject no_habilitada">Modelos y Sistemas de Costos</div>
+      <div class="subject no_cursada">Derecho Tributario</div> <!-- Previa pendiente -->
+      <div class="subject no_habilitada">Ética y Ejercicio Profesional</div>
+      <div class="subject no_cursada">Marketing Basico</div>
+    </div>
 
-      <div class="semester">
-        <h3>2do semestre</h3>
-        <div class="subject">Contabilidad Pública</div>
-        <div class="subject">Ética Profesional</div>
-        <div class="subject">Taller de Memoria</div>
-      </div>
+    <!-- Semestre 6 -->
+    <div class="semester">
+      <h2>Semestre 6</h2>
+      <div class="subject no_habilitada">Contabilidad Superior 1</div>
+      <div class="subject no_habilitada">Control Interno</div>
+      <div class="subject no_habilitada">Contabilidad Gerencial</div>
+      <div class="subject no_habilitada">Tributaria 1</div>
+    </div>
+
+    <!-- Semestre 7 -->
+    <div class="semester">
+      <h2>Semestre 7</h2>
+      <div class="subject no_habilitada">Auditoria 1</div>
+      <div class="subject no_habilitada">Tributaria 2</div>
+      <div class="subject no_habilitada">Finanzas Corporativas</div>
+    </div>
+
+    <!-- Semestre 8 -->
+    <div class="semester">
+      <h2>Semestre 8</h2>
+      <div class="subject no_habilitada">Informes Profesionales de Contador Público</div>
+      <div class="subject no_habilitada">Práctica Pericial en el Ámbito Judicial</div>
+      <div class="subject no_habilitada">Gestión Financiera del Estado</div>
     </div>
 
   </div>
